Changed layout again, fixed small gap under picture

--- a/app.css
+++ b/app.css
@@ -4,8 +4,8 @@ html {
 }
 
 body {
-  margin-left: 10vw;
-  margin-right: 10vw;
+  margin-left: 15vw;
+  margin-right: 15vw;
   background-color: rgb(0, 48, 63);
 }
 
@@ -21,27 +21,37 @@ h1 {
 #info {
   background-color: white;
   color: black;
-}
-
-#infop {
-  margin-left: 3em;
-  margin-right: 3em;
+  padding-left: 10%;
+  padding-right: 10%;
+  padding-top: 20%;
 }
 
 #preptime {
-  color: white;
+  background-color: lightgrey;
   padding: 10%;
+}
+
+b {
+  line-height: 3em;
+}
+
+ul {
+  margin-top: -10px;
+}
+
+ol {
+  margin-top: -10px;
 }
 
 #method {
   background-color: white;
   text-align: start;
-  padding: 5%;
+  padding: 10%;
 }
 
 #suppe {
   width: 100%;
-  height: auto;
+  height: 100%;
 }
 
 .grid-container {
@@ -49,7 +59,7 @@ h1 {
   grid-template-columns: auto auto;
 }
 
-.grid-item1 {
+/* .grid-item1 {
   grid-column-start: 1;
   grid-column-end: 3;
 }
@@ -57,7 +67,7 @@ h1 {
 .grid-item2 {
   grid-column-start: 1;
   grid-column-end: 3;
-}
+} */
 
 footer {
   background-color: rgb(0, 48, 63);
